main.css
* {
    box-sizing: border-box;
}
body{
    margin:0;
    padding:0;
}
.header{
    overflow: hidden;
    padding: 6px 10px;
    width:100%;
    height:100px;
    background: #FFECE6;
}
.logo{
    display:block;
    background-image: url(/img/Logo.png);
    background-repeat: no-repeat;
    background-position: center 0px;
    background-size: 190px 66px;
    height: 66px;
    width: 190px;
    position:fixed;
    left: 50%;
    top: 18px;
    margin-left: -75px;
}

.nav-button{
    margin: 32px 44px;
    background: none;
    border: none;
    cursor: pointer;
}

